# cukereuse_subscenarios_release

./: .gitignore  CITATION.cff  DATA_CARD.md  LICENSE  NOTICE  README.md  pyproject.toml
analysis/: corpus_summary.json  exact_subsequence_summary.json  extraction_classifier_feature_importance.json  extraction_classifier_metrics.json  mechanism_classifier_metrics.json  mechanism_predictions.parquet  phase2c_summary.json  post_classifier_headline.json  preliminary_rollups.json  reusable_scenario_report.html  rule_baseline_metrics.json  scenario_identity_audit.json  scenario_length_distribution.json  scenario_length_histogram.csv  slice_clusters_summary.json  slices_summary.json  spec_suite_outliers.csv
methodology/: LABELING_RUBRIC_paper2_slice_level.md  labeling_pool.jsonl  labeling_pool_stats.json  labels.jsonl  labels_summary.json  llm_judge_agreement.json
methodology/llm_judge/: inclusionai_ling-2.6-1t_free.jsonl  openai_gpt-oss-120b_free.jsonl
scripts/: 00_scenario_length_distribution.py  00b_scenario_count_audit.py  01_extract_slices.py  01a_probe_cluster_schema.py  02_count_subsequences.py  02b_inspect_top_patterns.py  02c_refine_ranking_and_outliers.py  04_slice_embedding_clustering.py  05a_build_labeling_pool.py  05b_pilot_label_sample.py  06_aggregate_labels_and_kappa.py  06b_train_extraction_classifier.py  07_llm_judge.py  07b_llm_judge_agreement.py  08_train_mechanism_classifier.py  09a_preliminary_rollups.py  09b_post_classifier_headline.py  11_extraction_candidates_html_report.py  _parquet_loader.py  plot_paper_figures.py  plot_paper_figures_v2.py
